# src/api/api.go
@@ -47,6 +47,8 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 		test_router := v1.Group("/test", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		countries := v1.Group("/countries", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		cities := v1.Group("/cities", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		files := v1.Group("/files", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+
 		users := v1.Group("/users")
 
 		// Base
@@ -55,6 +57,7 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 		routers.User(users, cfg)
 		routers.Country(countries, cfg)
 		routers.City(cities, cfg)
+		routers.File(files, cfg)
 	}
 
 	v2 := api.Group("/v2")
