# src/api/dto/file.go
@@ -1,0 +1,31 @@
+package dto
+
+import "mime/multipart"
+
+type FileFormRequest struct {
+	File *multipart.FileHeader `json:"file" form:"file" binding:"required" swaggerignoer:"true"`
+}
+
+type UploadFileRequest struct {
+	FileFormRequest
+	Description string `json:"description" form:"description" binding:"required"`
+}
+
+type CreateFileRequest struct {
+	Name        string `json:"name"`
+	Directory   string `json:"directory"`
+	Description string `json:"description"`
+	MimeType    string `json:"mimeType"`
+}
+
+type UpdateFileRequest struct {
+	Description string `json:"description"`
+}
+
+type FileResponse struct {
+	Id          int    `json:"id"`
+	Name        string `json:"name"`
+	Directory   string `json:"directory"`
+	Description string `json:"description"`
+	MimeType    string `json:"mimeType"`
+}
